# do-not-compile-this-code

./: README.md
do_not_compile_this_code/: Cargo.toml
do_not_compile_this_code/src/: main.rs
innocent_lib/: Cargo.toml
innocent_lib/src/: lib.rs
